--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ body{
 header{
   background: url(../img/header-background2.png) no-repeat top right  ;
   background-size: cover;
-  /* width:100vw; */
   height:100vh;
   width:auto;
 }
@@ -40,7 +39,14 @@ h1{
   padding-bottom: 106px;
 }
 
-.header-contents-1{
+.header h2{
+  color:#B60014;
+  font-weight: bold;
+  font-size: 2.1vw;
+  padding-top: 22px;
+}
+
+.header-contents_1{
   border:solid 3px #FFFFFF;
   background:#FFFFFF;
   width:25vw;
@@ -50,44 +56,36 @@ h1{
   margin-bottom: 60px;
 }
 
-.header-h2{
-  color:#B60014;
-  font-weight: bold;
-  font-size: 2.1vw;
-  padding-top: 22px;
-}
-
-.header-contents-2{
-  border-bottom: solid 3px #000000;
-  width:22vw;
-  margin: 0 auto;
-}
-
-.header-contents-1 p{
+.header-contents_1 p{
   font-weight: bold;
   font-size: 1.5vw;
   padding-top: 10px;
 }
 
-.header-contents-3{
+.header-contents_2{
+  border-bottom: solid 3px #000000;
+  width:22vw;
+  margin: 0 auto;
+}
+
+.header-contents_3{
   color:#FFFFFF;
   font-weight: bold;
   text-align: center;
   font-size: 1.4vw;
 }
 
-.header-contents-4{
+.header-contents_4{
   font-size:3vw;
 }
 
 @media screen and (max-width:768px){
 
-  .header-container{
+  header{
     background: url("");
     background-size:"";
     background-color: #0466A4;
   }
-
 }
 
   @media screen and (max-width:576px){
@@ -104,7 +102,14 @@ h1{
     font-weight: bold;
   }
 
-  .header-contents-1{
+  .header h2{
+    color:#B60014;
+    font-weight: bold;
+    font-size: 7vw;
+    padding-top: 22px;
+  }
+
+  .header-contents_1{
     border:solid 3px #FFFFFF;
     background:#FFFFFF;
     width:80vw;
@@ -114,33 +119,26 @@ h1{
     margin-bottom: 60px;
   }
 
-  .header-h2{
-    color:#B60014;
-    font-weight: bold;
-    font-size: 7vw;
-    padding-top: 22px;
-  }
-
-  .header-contents-2{
-    border-bottom: solid 3px #000000;
-    width:70vw;
-    margin: 0 auto;
-  }
-
-  .header-contents-1 p{
+  .header-contents_1 p{
     font-weight: bold;
     font-size: 5vw;
     padding-top: 10px;
   }
 
-  .header-contents-3{
+  .header-contents_2{
+    border-bottom: solid 3px #000000;
+    width:70vw;
+    margin: 0 auto;
+  }
+
+  .header-contents_3{
     color:#FFFFFF;
     font-weight: bold;
     text-align: center;
     font-size: 6vw;
   }
 
-  .header-contents-4{
+  .header-contents_4{
     font-size:9vw;
   }
 }
@@ -159,8 +157,6 @@ h1{
   padding-bottom: 64px;
 }
 
-/* 円は画像？css？ */
-
 .problem-container{
   padding-bottom: 65px;
 }
@@ -169,11 +165,6 @@ h1{
   display: flex;
   justify-content: center;
 }
-
-/* .col-problem{
-  display: flex;
-  justify-content: center;
-} */
 
 .problem-contents_1{
   display: flex;
@@ -200,6 +191,7 @@ h1{
 }
 
 @media screen and (max-width:576px){
+
   .problem-container{
     padding-bottom: 0px;
   }
@@ -217,14 +209,13 @@ h1{
     flex-direction: column;
   }
 
-  
-.problem-contents_2{
+  .problem-contents_2{
   border:solid 3px #0466A4;
   background-color: #0466A4;
   width: 100vw;
   height:auto;
   margin: 0 auto;
-}
+  }
 
   .problem-contents_2 p{
     color: #FFFFFF;
@@ -234,8 +225,7 @@ h1{
     padding-bottom: 34px;
     padding-top: 34px;
   }
-
-  }
+}
 
 /* point */
 
@@ -328,6 +318,7 @@ h1{
 }
 
 @media screen and (max-width:576px){
+
   .point-container{
     background: url("") ;
   }
@@ -378,7 +369,7 @@ h1{
     padding-bottom: 20px;
     order:1;
   }
-  
+
   .point-contents_2 h3{
     font-size: 4.5vw;
     padding-top: 8px;
@@ -388,7 +379,7 @@ h1{
   .point-contents_2 p{
     text-align: left;
   }
-  
+
   .point-contents_3{
     border:solid 3px #FFFFFF;
     background-color: #FFFFFF;
@@ -399,7 +390,7 @@ h1{
     padding-bottom: 20px;
     order:2;
   }
-  
+
   .point-contents_3 h3{
     font-size: 4.5vw;
     padding-top: 8px;
@@ -409,7 +400,7 @@ h1{
   .point-contents_3 p{
     text-align: left;
   }
-  }
+}
 
 /* review */
 
@@ -452,7 +443,7 @@ h1{
   .sp{
     padding-bottom: 10px;
   }
-  }
+}
 
 /* teacher */
 
@@ -476,6 +467,7 @@ h1{
 }
 
 @media screen and (max-width:576px){
+
   .teacher{
   background: url("");
   text-align: center;
@@ -490,11 +482,9 @@ h1{
   .teacher p{
     font-size: 2.4vw;
   }
-  }
+}
 
 /* qa */
-/* Q,Aは画像でよかった？ */
-/* Aが適切な大きさにできない */
 
 .qa-container{
   text-align: center;
@@ -520,23 +510,9 @@ h1{
 }
 
 .qa-contents img{
-  /* width:2.2vw;
-  height:auto; */
   width:42px;
   height:45px;
 }
-
-/* .qa-contents_1_1 h3{
-  color:#FFFFFF;
-  border:solid 3px #0B41A0;
-  background-color: #0B41A0;
-  width:2vw;
-  height:3.5vh;
-  text-align: center;
-  align-items: center;
-  font-size: 1vw;
-  font-weight: bold;
-} */
 
 .qa-contents_1_1 p{
   margin-left: 1vw;
@@ -546,22 +522,6 @@ h1{
   display: flex;
   margin-top: 20px;
 }
-
-/* .qa-contents_1_2 img{
-  width:2.2vw;
-  height: auto;
-} */
-/* .qa-contents_1_2 h3{
-  color:#FFFFFF;
-  border:solid 3px #990000;
-  background-color: #990000;
-  width:2vw;
-  height:3.5vh;
-  text-align: center;
-  align-items: center;
-  font-size: 1vw;
-  font-weight: bold;
-} */
 
 .qa-contents_1_2 p{
   margin-left: 1vw;
@@ -603,7 +563,6 @@ h1{
   margin-left: 1vw;
 }
 
-
 .qa-contents_4_1{
   display: flex;
   margin-top: 30px;
@@ -621,7 +580,6 @@ h1{
 .qa-contents_4_2 p{
   margin-left: 1vw;
 }
-
 
 .qa-contents_5_1{
   display: flex;
@@ -642,14 +600,14 @@ h1{
 }
 
 @media screen and (max-width:576px){
+
   .qa h2{
     font-size: 6vw;
     padding-bottom: 24px;
   }
-  }
+}
 
 /* footer */
-/* 画像でもよい？ */
 
 footer{
   margin-bottom:20px;
@@ -685,10 +643,9 @@ footer h2{
   margin:  0 auto;
   margin-top:10px;
   margin-bottom:20px;
-
 }
 
-.footer-contents_2--1{
+.footer-contents_2_1{
   flex-basis: 50%;
 }
 
@@ -721,11 +678,8 @@ footer h2{
   height:4vh;
 }
 
-/* 線内文字の縦中央揃え？ */
-
 .footer-contents_7{
   text-align: center;
-  /* align-items: center; */
   padding-top: 5px;
 }
 
@@ -733,8 +687,6 @@ footer h2{
   font-size: 1.2vw;
   padding-left: 20px;
 }
-
-/* display:flexできない？ */
 
 .footer-contents_9{
   border:solid 3px #990000;
@@ -760,10 +712,10 @@ footer h2{
   color: #FFFFFF;
   font-size: 1.5vw;
   font-weight: bold;
-  /* text-align: center; */
 }
 
 @media screen and (max-width:576px){
+  
   footer h2{
     font-size:3vw;
     margin-bottom: 27px;
@@ -777,19 +729,18 @@ footer h2{
     width: 55vw;
     margin: "";
     margin-top:10px;
-
   }
 
   .footer-contents_3{
     display: flex;
     padding-left: 0px;
   }
-  
+
   .footer-contents_3_1{
     padding-top: 5px;
     font-size: 1vw;
   }
-  
+
   .footer-contents_4{
     color: #0B41A0;
     font-size: 5vw;
@@ -807,13 +758,13 @@ footer h2{
     width:25vw;
     height:4vh;
   }
-  
+
   .footer-contents_7{
     text-align: center;
     /* align-items: center; */
     padding-top: 3px;
   }
-  
+
   .footer-contents_8{
     font-size: 1vw;
     padding-left: 12px;
@@ -824,15 +775,12 @@ footer h2{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* text-align: center; */
     margin: 0 auto;
     margin-top: 10px;
-
   }
 
   .footer-contents_9 p{
     font-size: 4vw;
-    /* text-align: center; */
   }
 }
 
